# iPM3D

./: CMakeLists.txt  README.md  particle.f90  test_domain.F90  testdomain3d.f90
src/: Domain.F90  Domain3d.f90  Domaintest.F90
test/: CMakeLists.txt  Domain3d.f90  FileName.F90  M_strings.f90  ParallelDump.F90  m_strings.mod  setup.sh  test_domain.F90  testdomain3d.f90
